Fixed Corrupt package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "type" : "git",
       "url" : "https://github.com/jimib/nodejs-google-contacts"
   },
-  "version": "0.0.1",,
+  "version": "0.0.1",
   "dependencies": {
 	"google-oauth":"0.0.2"
   }
